[package]
name = "m0_audio_directionalizer"
version = "0.1.0"
edition = "2021"

[dependencies]

circuit_playground_express = { git = "https://github.com/atsamd-rs/atsamd", features = ["unproven"]}
panic-halt = "0.2"
#panic-semihosting = "0.5"
smart-leds = "0.3.0"



[dependencies.ws2812-timer-delay]
features = ["slow"]
version = "0.3.0"



[package.metadata]
chip = "ATSAMD21G18A"